# browser-maze-bevy

./: .gitignore  Cargo.toml  LICENSE.txt  build-wasm.bash
.github/workflows/: release.yml
src/: main.rs  maze.rs
www/: index.html  style.css
