[package]
name = "browser-maze-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.21.0", features = ["simd-stable", "debug-render-3d"] }
petgraph = "0.6.3"
rand = { version = "0.8.5", default_features = false, features = ["small_rng"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
